--- a/.env
+++ b/.env
@@ -1,1 +1,16 @@
-ACV_PORT=8080
+ACV_PORT=8081
+
+FILE_PATH=/Users/wangjian/code/go/MyProject/acv/file
+
+ACV_DB_USERNAME=root
+ACV_DB_PASSWORD=wj2581320495
+ACV_DB_HOSTNAME=127.0.0.1:3306
+ACV_DB_DBNAME=acv
+
+REDIS_ADDRESS=your_redis_address
+REDIS_PORT=your_redis_port
+REDIS_PASSWORD=your_redis_password
+
+
+
+
